test/src/e2e_vm_tests/test_programs/should_fail/superabi_duplicate_methods8/src/main.sw
// Inheritance graph:
//          MySuperAbi
//              |
//            MyAbi

contract;

abi MySuperAbi
{
}
{
    fn method() {}
}

abi MyAbi : MySuperAbi
{
}
{
    fn method() {}
}

